# testexplain

./: .env.example  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
docs/milestones/: M0.md  M1.md
src/testexplain/: api.py  cli.py  core.py  gateway.py
src/testexplain/ingestion/: playwright.py
src/testexplain/static/: index.html
src/testlens/: api.py  cli.py  core.py  gateway.py  models.py
src/testlens/ingestion/: playwright.py
tests/: test_api.py  test_cli.py  test_core.py  test_gateway.py  test_ingestion.py  test_models.py
tests/fixtures/: sample_report.json
